--- a/demo/pamawasys/index.html
+++ b/demo/pamawasys/index.html
@@ -91,7 +91,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                           <p class="info-box-title">Call Us</p>
-                          <p class="info-box-subtitle"><a href="tel:(+9) 847-291-4353">(+62)  81211122xx</a></p>
+                          <p class="info-box-subtitle"><a href="tel:(+62) 847-291-4353">(+62)  81xxxxxx</a></p>
                       </div>
                     </div>
                   </li>
@@ -686,7 +686,7 @@
         <div class="col-md-4">
           <div class="subscribe-call-to-acton">
               <h3>Can We Help?</h3>
-              <h4>(+62)  81211122xx</h4>
+              <h4>(+62)  xxxxxxx</h4>
           </div>
         </div><!-- Col end -->
 
